# tvscreener

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: codecov.yml  pip-publish.yml
generate/: Generate FilterFields.ipynb  Generate.ipynb  Scrap Screener Column Types.ipynb  crypto.json  generate.py  main.json  patterns.json  time_intervals.json  tvdata.json  tvdata.py
generate/code/: index.py.generated  industry.py.generated  sector.py.generated  symbol_type.py.generated
generate/data/: crypto.json  exchange.json  forex.json  index.json  sector.json  stock.json  submarket.json  symbol type.json
notebooks/: Stock.ipynb  example.ipynb
scripts/code/: country.py.generated  exchange.py.generated  submarket.py.generated
scripts/data/: country.json  industry.json  main.json  patterns.json  time_intervals.json
test/: test.py
test/functional/: test_cryptoscreener.py  test_forexscreener.py  test_screener.py  test_stockscreener.py
test/unit/: test_columns.py  test_fields.py  test_filters.py  test_markets.py  test_util.py
tests/functional/: test_forexscreener.py  test_stockscreener.py
tests/unit/: test_fields.py  test_filters.py  test_util.py
tvscreener/: __init__.py  beauty.py  core.py  exceptions.py  fields.py  filter.py  properties.ini  tvdata.py  util.py
tvscreener/core/: base.py  crypto.py  forex.py  stock.py
tvscreener/field/: __init__.py  crypto.py  forex.py  stock.py
tvscreener/filter/: __init__.py
tvscreener/ta/: __init__.py
