[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tvscreener"
version = "0.0.12"
description = "TradingView Screener API"
readme = "README.md"
authors = [
    { name = "House of AI" }
]
license-files = [ "LICENSE" ]
requires-python = ">=3.10"
keywords = ["finance", "tradingview", "technical-analysis"]
dependencies = [
    "pandas",
    "requests>=2.27.1"
]
urls = {"Homepage" = "https://github.com/houseofai/tvscreener"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
[tool.setuptools.packages.find]
include = ["tvscreener*"]
exclude = ["notebooks", "scripts", "tests"]