[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tvscreener"
version = "0.0.14"
description = "TradingView Screener API"
readme = "README.md"
authors = [
    { name = "House of AI", email = "info@houseofai.com" }
]
license = "MIT"
requires-python = ">=3.10"
keywords = ["finance", "tradingview", "technical-analysis"]
dependencies = [
    "pandas>=1.3.0",
    "requests>=2.27.1"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Homepage = "https://github.com/houseofai/tvscreener"
Repository = "https://github.com/houseofai/tvscreener"
Documentation = "https://github.com/houseofai/tvscreener"
"Bug Tracker" = "https://github.com/houseofai/tvscreener/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "build>=1.0.0",
    "twine>=4.0.0"
]

[tool.setuptools.packages.find]
include = ["tvscreener*"]
exclude = ["notebooks", "scripts", "tests"]

[tool.setuptools.package-data]
tvscreener = ["py.typed"]
